--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tinymce/tinymce-react": "^5.1.1",
     "@types/react-router-dom": "^5.3.3",
     "lodash": "^4.17.21",
     "react": "^19.0.0",
