--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tinymce/tinymce-react": "^5.1.1",
     "@types/react-router-dom": "^5.3.3",
     "lodash": "^4.17.21",
+    "quill": "2.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.0.2",
